<?xml version="1.0"?>
<package format="2">
  <name>aist_aruco_ros</name>
  <version>1.0.0</version>
  <description>The aist_aruco_ros package</description>

  <maintainer email="t.ueshiba@aist.go.jp">Toshio UESHIBA</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>ddynamic_reconfigure</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>pluginlib</depend>
  <depend>nodelet</depend>

  <depend>aist_utility</depend>
  <depend>aruco</depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_description.xml"/>
  </export>
</package>
