<?xml version="1.0"?>
<package format="2">
  <name>aist_bringup</name>
  <version>1.0.0</version>
  <description>Package contains bringup scripts/config/tools for various robots</description>

  <author email="t.ueshiba@aist.go.jp">Toshio UESHIBA</author>
  <maintainer email="t.ueshiba@aist.go.jp">Toshio UESHIBA</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>position_controllers</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>aist_description</exec_depend>

  <test_depend>roslaunch</test_depend>
  <test_depend>rostest</test_depend>
</package>
