<?xml version="1.0"?>
<package format="2">
  <name>aist_camera_calibration</name>
  <version>1.0.0</version>
  <description>The aist_camera_calibration package</description>

  <maintainer email="t.ueshiba@aist.go.jp">Toshio UESHIBA</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>boost</depend>
  <depend>eigen</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_srvs</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>aist_utility</depend>
  <depend>aist_aruco_ros</depend>
  <depend>pluginlib</depend>
  <depend>nodelet</depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_description.xml"/>
  </export>
</package>
