<?xml version="1.0"?>
<package format="2">
  <name>aist_camera_multiplexer</name>
  <version>1.0.0</version>
  <description>The aist_camera_multiplexer package</description>

  <maintainer email="t.ueshiba@aist.go.jp">Toshio UESHIBA</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>pluginlib</depend>
  <depend>nodelet</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>ddynamic_reconfigure</depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_description.xml"/>
  </export>
</package>
