<?xml version="1.0"?>
<package format="2">
  <name>aist_collision_object_manager</name>
  <version>0.0.0</version>
  <description>The aist_collision_object_manager</description>

  <maintainer email="t.ueshiba@aist.go.jp">Toshio Ueshiba</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>message_runtime</exec_depend>

  <depend>tf</depend>
  <depend>tf2_ros</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>shape_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>aist_msgs</depend>

</package>
