<package>
  <name>aist_controllers</name>
  <version>0.0.1</version>
  <description>The head action is a node that provides an action interface for
  pointing the head of the configured robot. It passes trajectory goals to the
  controller, and reports success when they have finished executing.</description>
  <maintainer email="t.ueshiba@aist.go.jp">Toshio UESBHIA</maintainer>

  <license>BSD</license>

  <url type="website">http://gitlab.com/art-aist-private/artros</url>

  <author>Toshio UESHIBA</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>orocos_kdl</build_depend>
  <build_depend>kdl_parser</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>orocos_kdl</run_depend>
  <run_depend>kdl_parser</run_depend>
</package>
