<?xml version="1.0"?>
<package format="2">

  <name>aist_controllers</name>
  <version>0.0.1</version>
  <description>The head action is a node that provides an action interface for
  pointing the head of the configured robot. It passes trajectory goals to the
  controller, and reports success when they have finished executing.</description>
  <maintainer email="t.ueshiba@aist.go.jp">Toshio UESBHIA</maintainer>

  <license>BSD</license>

  <url type="website">http://gitlab.com/art-aist-private/artros</url>

  <author>Toshio UESHIBA</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>control_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>orocos_kdl</depend>
  <depend>kdl_parser</depend>
  <depend>trac_ik_lib</depend>
  <depend>nlopt</depend>
  <depend>moveit_servo</depend>

</package>
