<?xml version="1.0"?>
<package format="3">
  <name>aist_description</name>
  <version>0.0.0</version>
  <description>The aist_description package</description>
  <maintainer email="t.ueshiba@aist.go.jp">Toshio Ueshiba</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake_core</buildtool_depend>

  <exec_depend>ament_index_python</exec_depend>

  <buildtool_export_depend>ament_cmake_core</buildtool_export_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
