<?xml version="1.0"?>
<package format="2">
  <name>aist_fastening_tools</name>
  <version>1.1.0</version>
  <description>The aist_fastening_tools package</description>

  <maintainer email="t.ueshiba@aist.go.jp">Toshio UESHIBA</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>rospy</depend>
  <depend>dynamixel_workbench_msgs</depend>
  <depend>dynamixel_workbench_toolbox</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>

</package>
